// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apigw.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "HelloLambda" => Set {},
    "MyApi" => Set {
      "HelloLambda",
    },
    "GetRoot" => Set {
      "MyApi",
    },
  },
  "keys": Set {
    "HelloLambda",
    "MyApi",
    "GetRoot",
  },
  "nodes": Object {
    "GetRoot": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_apigateway.Method",
      "logicalId": "GetRoot",
      "namespace": "aws_apigateway",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "httpMethod": Object {
            "type": "string",
            "value": "GET",
          },
          "resource": Object {
            "attribute": Object {
              "type": "string",
              "value": "root",
            },
            "fn": "getAtt",
            "logicalId": "MyApi",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "HelloLambda": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "HelloLambda",
      "namespace": "aws_lambda",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "code": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "examples/lambda-handler",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_lambda.Code",
            "method": "fromAsset",
            "namespace": "aws_lambda",
            "type": "staticMethodCall",
          },
          "handler": Object {
            "type": "string",
            "value": "index.handler",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "PYTHON_3_6",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [
        Object {
          "key": "category",
          "value": "ecommerce",
        },
      ],
      "type": "construct",
    },
    "MyApi": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_apigateway.LambdaRestApi",
      "logicalId": "MyApi",
      "namespace": "aws_apigateway",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "handler": Object {
            "fn": "ref",
            "logicalId": "HelloLambda",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`ecs.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "VPC" => Set {},
    "Cluster" => Set {
      "VPC",
    },
    "MyTaskDef" => Set {},
    "ContainerDef" => Set {
      "MyTaskDef",
    },
    "Service" => Set {
      "Cluster",
      "MyTaskDef",
    },
  },
  "keys": Set {
    "VPC",
    "MyTaskDef",
    "Cluster",
    "ContainerDef",
    "Service",
  },
  "nodes": Object {
    "Cluster": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ecs.Cluster",
      "logicalId": "Cluster",
      "namespace": "aws_ecs",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "vpc": Object {
            "fn": "ref",
            "logicalId": "VPC",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "ContainerDef": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ecs.ContainerDefinition",
      "logicalId": "ContainerDef",
      "namespace": "aws_ecs",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "essential": Object {
            "type": "boolean",
            "value": true,
          },
          "image": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "redis",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_ecs.ContainerImage",
            "method": "fromRegistry",
            "namespace": "aws_ecs",
            "type": "staticMethodCall",
          },
          "memoryLimitMiB": Object {
            "type": "number",
            "value": 1024,
          },
          "taskDefinition": Object {
            "fn": "ref",
            "logicalId": "MyTaskDef",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "MyTaskDef": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ecs.TaskDefinition",
      "logicalId": "MyTaskDef",
      "namespace": "aws_ecs",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "compatibility": Object {
            "choice": "FARGATE",
            "fqn": "aws-cdk-lib.aws_ecs.Compatibility",
            "namespace": "aws_ecs",
            "type": "enum",
          },
          "cpu": Object {
            "type": "string",
            "value": "1024",
          },
          "family": Object {
            "type": "string",
            "value": "redis",
          },
          "memoryMiB": Object {
            "type": "string",
            "value": "1GB",
          },
          "networkMode": Object {
            "choice": "AWS_VPC",
            "fqn": "aws-cdk-lib.aws_ecs.NetworkMode",
            "namespace": "aws_ecs",
            "type": "enum",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Service": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ecs.FargateService",
      "logicalId": "Service",
      "namespace": "aws_ecs",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "cluster": Object {
            "fn": "ref",
            "logicalId": "Cluster",
            "type": "intrinsic",
          },
          "taskDefinition": Object {
            "fn": "ref",
            "logicalId": "MyTaskDef",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "VPC": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ec2.Vpc",
      "logicalId": "VPC",
      "namespace": "aws_ec2",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "maxAzs": Object {
            "type": "number",
            "value": 1,
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`fleet.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "MyVpc" => Set {},
    "MyFleet" => Set {
      "MyVpc",
    },
  },
  "keys": Set {
    "MyVpc",
    "MyFleet",
  },
  "nodes": Object {
    "MyFleet": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_autoscaling.AutoScalingGroup",
      "logicalId": "MyFleet",
      "namespace": "aws_autoscaling",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "desiredCapacity": Object {
            "type": "number",
            "value": 3,
          },
          "instanceType": Object {
            "args": Object {
              "array": Array [
                Object {
                  "choice": "T2",
                  "fqn": "aws-cdk-lib.aws_ec2.InstanceClass",
                  "namespace": "aws_ec2",
                  "type": "enum",
                },
                Object {
                  "choice": "XLARGE",
                  "fqn": "aws-cdk-lib.aws_ec2.InstanceSize",
                  "namespace": "aws_ec2",
                  "type": "enum",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_ec2.InstanceType",
            "method": "of",
            "namespace": "aws_ec2",
            "type": "staticMethodCall",
          },
          "machineImage": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "void",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_ecs.EcsOptimizedImage",
            "method": "amazonLinux2",
            "namespace": "aws_ecs",
            "type": "staticMethodCall",
          },
          "vpc": Object {
            "fn": "ref",
            "logicalId": "MyVpc",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "MyVpc": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ec2.Vpc",
      "logicalId": "MyVpc",
      "namespace": "aws_ec2",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "maxAzs": Object {
            "type": "number",
            "value": 2,
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`lambda-events.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "MyTopic" => Set {},
    "Table" => Set {},
    "HelloWorldFunction" => Set {
      "Table",
      "MyTopic",
    },
  },
  "keys": Set {
    "MyTopic",
    "Table",
    "HelloWorldFunction",
  },
  "nodes": Object {
    "HelloWorldFunction": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "HelloWorldFunction",
      "namespace": "aws_lambda",
      "overrides": Array [
        Object {
          "childConstructPath": "ServiceRole",
          "update": Object {
            "path": "Properties.Description",
            "value": Object {
              "type": "string",
              "value": "This value has been overridden",
            },
          },
        },
      ],
      "props": Object {
        "fields": Object {
          "code": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "examples/lambda-handler",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_lambda.Code",
            "method": "fromAsset",
            "namespace": "aws_lambda",
            "type": "staticMethodCall",
          },
          "environment": Object {
            "fields": Object {
              "Param": Object {
                "type": "string",
                "value": "f",
              },
            },
            "type": "object",
          },
          "events": Object {
            "array": Array [
              Object {
                "args": Object {
                  "array": Array [
                    Object {
                      "fn": "ref",
                      "logicalId": "Table",
                      "type": "intrinsic",
                    },
                    Object {
                      "fields": Object {
                        "startingPosition": Object {
                          "choice": "TRIM_HORIZON",
                          "fqn": "aws-cdk-lib.aws_lambda.StartingPosition",
                          "namespace": "aws_lambda",
                          "type": "enum",
                        },
                      },
                      "type": "struct",
                    },
                  ],
                  "type": "array",
                },
                "fqn": "aws-cdk-lib.aws_lambda_event_sources.DynamoEventSource",
                "namespace": "aws_lambda_event_sources",
                "type": "initializer",
              },
              Object {
                "args": Object {
                  "array": Array [
                    Object {
                      "type": "string",
                      "value": "GET",
                    },
                    Object {
                      "type": "string",
                      "value": "/hello",
                    },
                    Object {
                      "fields": Object {},
                      "type": "struct",
                    },
                  ],
                  "type": "array",
                },
                "fqn": "aws-cdk-lib.aws_lambda_event_sources.ApiEventSource",
                "namespace": "aws_lambda_event_sources",
                "type": "initializer",
              },
              Object {
                "args": Object {
                  "array": Array [
                    Object {
                      "type": "string",
                      "value": "POST",
                    },
                    Object {
                      "type": "string",
                      "value": "/hello",
                    },
                    Object {
                      "fields": Object {},
                      "type": "struct",
                    },
                  ],
                  "type": "array",
                },
                "fqn": "aws-cdk-lib.aws_lambda_event_sources.ApiEventSource",
                "namespace": "aws_lambda_event_sources",
                "type": "initializer",
              },
              Object {
                "args": Object {
                  "array": Array [
                    Object {
                      "fn": "ref",
                      "logicalId": "MyTopic",
                      "type": "intrinsic",
                    },
                    Object {
                      "fields": Object {},
                      "type": "struct",
                    },
                  ],
                  "type": "array",
                },
                "fqn": "aws-cdk-lib.aws_lambda_event_sources.SnsEventSource",
                "namespace": "aws_lambda_event_sources",
                "type": "initializer",
              },
            ],
            "type": "array",
          },
          "handler": Object {
            "type": "string",
            "value": "app.hello_handler",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "PYTHON_3_6",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "MyTopic": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_sns.Topic",
      "logicalId": "MyTopic",
      "namespace": "aws_sns",
      "overrides": Array [],
      "props": Object {
        "fields": Object {},
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Table": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_dynamodb.Table",
      "logicalId": "Table",
      "namespace": "aws_dynamodb",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "partitionKey": Object {
            "fields": Object {
              "name": Object {
                "type": "string",
                "value": "ID",
              },
              "type": Object {
                "choice": "STRING",
                "fqn": "aws-cdk-lib.aws_dynamodb.AttributeType",
                "namespace": "aws_dynamodb",
                "type": "enum",
              },
            },
            "type": "struct",
          },
          "stream": Object {
            "choice": "NEW_AND_OLD_IMAGES",
            "fqn": "aws-cdk-lib.aws_dynamodb.StreamViewType",
            "namespace": "aws_dynamodb",
            "type": "enum",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`lambda-layer.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "AwsCliLayer" => Set {},
    "Lambda" => Set {
      "AwsCliLayer",
    },
  },
  "keys": Set {
    "AwsCliLayer",
    "Lambda",
  },
  "nodes": Object {
    "AwsCliLayer": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.lambda_layer_awscli.AwsCliLayer",
      "logicalId": "AwsCliLayer",
      "namespace": "lambda_layer_awscli",
      "overrides": Array [],
      "props": Object {
        "type": "void",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Lambda": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "Lambda",
      "namespace": "aws_lambda",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "code": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "exports.handler = async function() { return 'SUCCESS'; }",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_lambda.Code",
            "method": "fromInline",
            "namespace": "aws_lambda",
            "type": "staticMethodCall",
          },
          "handler": Object {
            "type": "string",
            "value": "index.handler",
          },
          "layers": Object {
            "array": Array [
              Object {
                "fn": "ref",
                "logicalId": "AwsCliLayer",
                "type": "intrinsic",
              },
            ],
            "type": "array",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "NODEJS_16_X",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`lambda-role-removed.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "Lambda" => Set {},
  },
  "keys": Set {
    "Lambda",
  },
  "nodes": Object {
    "Lambda": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "Lambda",
      "namespace": "aws_lambda",
      "overrides": Array [
        Object {
          "childConstructPath": "ServiceRole",
          "removeResource": true,
        },
      ],
      "props": Object {
        "fields": Object {
          "code": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "examples/lambda-handler",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_lambda.Code",
            "method": "fromAsset",
            "namespace": "aws_lambda",
            "type": "staticMethodCall",
          },
          "description": Object {
            "type": "string",
            "value": "This function has its service role removed, for demonstration purposes. You probably wouldn't do this to a real function",
          },
          "handler": Object {
            "type": "string",
            "value": "index.handler",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "NODEJS",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`lambda-topic.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "Topic" => Set {},
    "Lambda" => Set {
      "Topic",
    },
  },
  "keys": Set {
    "Topic",
    "Lambda",
  },
  "nodes": Object {
    "Lambda": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "Lambda",
      "namespace": "aws_lambda",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "code": Object {
            "args": Object {
              "array": Array [
                Object {
                  "type": "string",
                  "value": "examples/lambda-handler",
                },
                Object {
                  "fields": Object {},
                  "type": "struct",
                },
              ],
              "type": "array",
            },
            "fqn": "aws-cdk-lib.aws_lambda.Code",
            "method": "fromAsset",
            "namespace": "aws_lambda",
            "type": "staticMethodCall",
          },
          "events": Object {
            "array": Array [
              Object {
                "args": Object {
                  "array": Array [
                    Object {
                      "fn": "ref",
                      "logicalId": "Topic",
                      "type": "intrinsic",
                    },
                    Object {
                      "fields": Object {},
                      "type": "struct",
                    },
                  ],
                  "type": "array",
                },
                "fqn": "aws-cdk-lib.aws_lambda_event_sources.SnsEventSource",
                "namespace": "aws_lambda_event_sources",
                "type": "initializer",
              },
            ],
            "type": "array",
          },
          "handler": Object {
            "type": "string",
            "value": "index.handler",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "NODEJS",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Topic": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_sns.Topic",
      "logicalId": "Topic",
      "namespace": "aws_sns",
      "overrides": Array [],
      "props": Object {
        "fields": Object {},
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`pipeline.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "Repo" => Set {
      "Key",
      "BuildProject",
    },
    "BuildProject" => Set {
      "Key",
    },
    "Key" => Set {},
    "Pipeline" => Set {
      "Repo",
      "BuildProject",
    },
  },
  "keys": Set {
    "Key",
    "BuildProject",
    "Repo",
    "Pipeline",
  },
  "nodes": Object {
    "BuildProject": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_codebuild.PipelineProject",
      "logicalId": "BuildProject",
      "namespace": "aws_codebuild",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "encryptionKey": Object {
            "fn": "ref",
            "logicalId": "Key",
            "type": "intrinsic",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Key": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_kms.Key",
      "logicalId": "Key",
      "namespace": "aws_kms",
      "overrides": Array [],
      "props": Object {
        "fields": Object {},
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Pipeline": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_codepipeline.Pipeline",
      "logicalId": "Pipeline",
      "namespace": "aws_codepipeline",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "stages": Object {
            "array": Array [
              Object {
                "fields": Object {
                  "actions": Object {
                    "array": Array [
                      Object {
                        "args": Object {
                          "array": Array [
                            Object {
                              "fields": Object {
                                "actionName": Object {
                                  "type": "string",
                                  "value": "Source",
                                },
                                "output": Object {
                                  "args": Object {
                                    "array": Array [
                                      Object {
                                        "type": "string",
                                        "value": "Source",
                                      },
                                    ],
                                    "type": "array",
                                  },
                                  "fqn": "aws-cdk-lib.aws_codepipeline.Artifact",
                                  "method": "artifact",
                                  "namespace": "aws_codepipeline",
                                  "type": "staticMethodCall",
                                },
                                "repository": Object {
                                  "fn": "ref",
                                  "logicalId": "Repo",
                                  "type": "intrinsic",
                                },
                              },
                              "type": "struct",
                            },
                          ],
                          "type": "array",
                        },
                        "fqn": "aws-cdk-lib.aws_codepipeline_actions.CodeCommitSourceAction",
                        "namespace": "aws_codepipeline_actions",
                        "type": "initializer",
                      },
                    ],
                    "type": "array",
                  },
                  "stageName": Object {
                    "type": "string",
                    "value": "Source",
                  },
                },
                "type": "struct",
              },
              Object {
                "fields": Object {
                  "actions": Object {
                    "array": Array [
                      Object {
                        "args": Object {
                          "array": Array [
                            Object {
                              "fields": Object {
                                "actionName": Object {
                                  "type": "string",
                                  "value": "Build",
                                },
                                "input": Object {
                                  "args": Object {
                                    "array": Array [
                                      Object {
                                        "type": "string",
                                        "value": "Source",
                                      },
                                    ],
                                    "type": "array",
                                  },
                                  "fqn": "aws-cdk-lib.aws_codepipeline.Artifact",
                                  "method": "artifact",
                                  "namespace": "aws_codepipeline",
                                  "type": "staticMethodCall",
                                },
                                "outputs": Object {
                                  "array": Array [
                                    Object {
                                      "args": Object {
                                        "array": Array [
                                          Object {
                                            "type": "string",
                                            "value": "Build",
                                          },
                                        ],
                                        "type": "array",
                                      },
                                      "fqn": "aws-cdk-lib.aws_codepipeline.Artifact",
                                      "method": "artifact",
                                      "namespace": "aws_codepipeline",
                                      "type": "staticMethodCall",
                                    },
                                  ],
                                  "type": "array",
                                },
                                "project": Object {
                                  "fn": "ref",
                                  "logicalId": "BuildProject",
                                  "type": "intrinsic",
                                },
                              },
                              "type": "struct",
                            },
                          ],
                          "type": "array",
                        },
                        "fqn": "aws-cdk-lib.aws_codepipeline_actions.CodeBuildAction",
                        "namespace": "aws_codepipeline_actions",
                        "type": "initializer",
                      },
                    ],
                    "type": "array",
                  },
                  "stageName": Object {
                    "type": "string",
                    "value": "Build",
                  },
                },
                "type": "struct",
              },
              Object {
                "fields": Object {
                  "actions": Object {
                    "array": Array [
                      Object {
                        "args": Object {
                          "array": Array [
                            Object {
                              "fields": Object {
                                "actionName": Object {
                                  "type": "string",
                                  "value": "Deploy",
                                },
                                "adminPermissions": Object {
                                  "type": "boolean",
                                  "value": true,
                                },
                                "stackName": Object {
                                  "type": "string",
                                  "value": "MyStack",
                                },
                                "templatePath": Object {
                                  "args": Object {
                                    "array": Array [
                                      Object {
                                        "type": "string",
                                        "value": "Build",
                                      },
                                      Object {
                                        "type": "string",
                                        "value": "template.yaml",
                                      },
                                    ],
                                    "type": "array",
                                  },
                                  "fqn": "aws-cdk-lib.aws_codepipeline.ArtifactPath",
                                  "method": "artifactPath",
                                  "namespace": "aws_codepipeline",
                                  "type": "staticMethodCall",
                                },
                              },
                              "type": "struct",
                            },
                          ],
                          "type": "array",
                        },
                        "fqn": "aws-cdk-lib.aws_codepipeline_actions.CloudFormationCreateUpdateStackAction",
                        "namespace": "aws_codepipeline_actions",
                        "type": "initializer",
                      },
                    ],
                    "type": "array",
                  },
                  "stageName": Object {
                    "type": "string",
                    "value": "Deploy",
                  },
                },
                "type": "struct",
              },
            ],
            "type": "array",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "Repo": Object {
      "dependsOn": Array [
        "Key",
        "BuildProject",
      ],
      "fqn": "aws-cdk-lib.aws_codecommit.Repository",
      "logicalId": "Repo",
      "namespace": "aws_codecommit",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "repositoryName": Object {
            "type": "string",
            "value": "my-first-decdk-repo",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`pure-cfn.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "Hello" => Set {},
    "MyLogGroup" => Set {},
  },
  "keys": Set {
    "Hello",
    "MyLogGroup",
  },
  "nodes": Object {
    "Hello": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_sqs.Queue",
      "logicalId": "Hello",
      "namespace": "aws_sqs",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "encryption": Object {
            "choice": "UNENCRYPTED",
            "fqn": "aws-cdk-lib.aws_sqs.QueueEncryption",
            "namespace": "aws_sqs",
            "type": "enum",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "MyLogGroup": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.CfnResource",
      "logicalId": "MyLogGroup",
      "namespace": undefined,
      "props": Object {
        "fields": Object {
          "properties": Object {
            "fields": Object {
              "LogGroupName": Object {
                "type": "any",
                "value": Object {
                  "fn": "ref",
                  "logicalId": "AWS::AccountId",
                  "type": "intrinsic",
                },
              },
            },
            "type": "object",
          },
          "type": Object {
            "type": "string",
            "value": "AWS::Logs::LogGroup",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "resource",
    },
  },
}
`;

exports[`queue-kms.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "MyQueue" => Set {},
  },
  "keys": Set {
    "MyQueue",
  },
  "nodes": Object {
    "MyQueue": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_sqs.Queue",
      "logicalId": "MyQueue",
      "namespace": "aws_sqs",
      "overrides": Array [
        Object {
          "childConstructPath": "Key",
          "delete": Object {
            "path": "Properties.Description",
          },
        },
      ],
      "props": Object {
        "fields": Object {
          "encryption": Object {
            "choice": "KMS",
            "fqn": "aws-cdk-lib.aws_sqs.QueueEncryption",
            "namespace": "aws_sqs",
            "type": "enum",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`reusable-lambda-code.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "SourceBucket" => Set {},
    "BusinessLogic" => Set {},
    "MyFunction" => Set {
      "BusinessLogic",
    },
  },
  "keys": Set {
    "SourceBucket",
    "BusinessLogic",
    "MyFunction",
  },
  "nodes": Object {
    "BusinessLogic": Object {
      "call": Object {
        "args": Object {
          "array": Array [
            Object {
              "fn": "ref",
              "logicalId": "SourceBucket",
              "type": "intrinsic",
            },
            Object {
              "type": "string",
              "value": "foo-bar",
            },
            Object {
              "type": "void",
            },
          ],
          "type": "array",
        },
        "fqn": "aws-cdk-lib.aws_lambda.Code",
        "method": "fromBucket",
        "namespace": "aws_lambda",
        "type": "staticMethodCall",
      },
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Code",
      "logicalId": "BusinessLogic",
      "namespace": "aws_lambda",
      "overrides": Array [],
      "tags": Array [],
      "type": "lazy-construct",
    },
    "MyFunction": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_lambda.Function",
      "logicalId": "MyFunction",
      "namespace": "aws_lambda",
      "overrides": Array [],
      "props": Object {
        "fields": Object {
          "code": Object {
            "fn": "ref",
            "logicalId": "BusinessLogic",
            "type": "intrinsic",
          },
          "handler": Object {
            "type": "string",
            "value": "index.handler",
          },
          "runtime": Object {
            "fqn": "aws-cdk-lib.aws_lambda.Runtime",
            "namespace": "aws_lambda",
            "property": "NODEJS_14_X",
            "type": "staticProperty",
          },
        },
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
    "SourceBucket": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_s3.Bucket",
      "logicalId": "SourceBucket",
      "namespace": "aws_s3",
      "overrides": Array [],
      "props": Object {
        "fields": Object {},
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;

exports[`vpc.json 1`] = `
DependencyGraph {
  "_dependencies": Map {
    "VPC" => Set {},
  },
  "keys": Set {
    "VPC",
  },
  "nodes": Object {
    "VPC": Object {
      "dependsOn": Array [],
      "fqn": "aws-cdk-lib.aws_ec2.Vpc",
      "logicalId": "VPC",
      "namespace": "aws_ec2",
      "overrides": Array [],
      "props": Object {
        "fields": Object {},
        "type": "struct",
      },
      "tags": Array [],
      "type": "construct",
    },
  },
}
`;
